groq index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title> Mi primera página web ! </title>
+	<title>Diario de Progreso</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 20px;
+		}
+		.container {
+			background-color: #f9f9f9;
+			padding: 20px;
+			border: 1px solid #ccc;
+			border-radius: 10px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
+		.date {
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
+		.feature {
+			margin-bottom: 20px;
+		}
+		.feature h2 {
+			margin-top: 0;
+		}
+		.feature p {
+			margin-bottom: 10px;
+		}
+	</style>
 </head>
-<body bgcolor="Black" text="White"> Novedades para Empleo
-<p> No entiendo cual es al relación entre privatizar Aerolíneas y terminar con los paros. Los paros los hacen los gremios y los trabajadores, como ocurre en cualquier empresa privada.</p>
-<p> La Justicia ordenó bloquear MagisTV en Argentina: hay 5 detenidos y un pedido a Google para impedir el uso de la app.
-
-👉🏻También allanaron locales que vendían TV boxes con la app instalada, la cual permitía acceder a contenidos pirateados como canales de TV, películas y fútbol.</p>
+<body>
+	<div class="container">
+		<h1>Diario de Progreso</h1>
+		<!-- Añade aquí tus entradas diarias -->
+		<div class="date">2023-03-01</div>
+		<div class="feature">
+			<h2>Feature 1</h2>
+			<p>Descripción de la feature 1</p>
+		</div>
+		<div class="feature">
+			<h2>Feature 2</h2>
+			<p>Descripción de la feature 2</p>
+		</div>
+		<!-- Añade aquí tus entradas diarias -->
+	</div>
 </body>
-
 </html>
