--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Diario de Progreso</title>
+	<title>Innovaciones en el Aplicación Programas de Empleo</title>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
@@ -27,6 +27,19 @@
 		.feature p {
 			margin-bottom: 10px;
 		}
+		.image {
+			width: 100%;
+			height: auto;
+			margin-bottom: 10px;
+			border-radius: 10px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		}
+		@media (max-width: 768px) {
+			.image {
+				width: 50%;
+				margin: 0 auto;
+			}
+		}
 	</style>
 </head>
 <body>
@@ -37,12 +50,18 @@
 		<div class="feature">
 			<h2>Feature 1</h2>
 			<p>Descripción de la feature 1</p>
+			<img src="/images/feature1.jpg" alt="Imagen de la feature 1" class="image">
 		</div>
 		<div class="feature">
 			<h2>Feature 2</h2>
 			<p>Descripción de la feature 2</p>
+			<img src="/images/feature2.jpg" alt="Imagen de la feature 2" class="image">
 		</div>
-		<!-- Añade aquí tus entradas diarias -->
+		<div class="feature">
+			<h2>Feature 3</h2>
+			<p>Descripción de la feature 2</p>
+			<img src="/images/feature2.jpg" alt="Imagen de la feature 2" class="image">
+		</div>
 	</div>
 </body>
 </html>
