--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<img src="/images/feature2.jpg" alt="Imagen de la feature 2" class="image">
 		</div>
 		<div class="feature">
-			<h2>otra cosa/h2>
+			<h2>otra cosa</h2>
 			<p>Descripción de la feature 2</p>
 			<img src="/images/feature2.jpg" alt="Imagen de la feature 2" class="image">
 		</div>
