--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<h1>Diario de Progreso</h1>
 		<!-- Añade aquí tus entradas diarias -->
 		<div class="date">2023-03-01</div>
+		<title>titulo</title>
 		<div class="feature">
 			<h2>Feature 1</h2>
 			<p>Descripción de la feature 1</p>
