--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		}
 	</style>
 </head>
-<body>
+<body bgcolor="Black" text="White"> Provincia de Córdoba, Argentina
 	<div class="container">
 		<h1>Diario de Progreso</h1>
 		<!-- Añade aquí tus entradas diarias -->
