--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 		}
 	</style>
 </head>
-<body bgcolor="Black" text="White"> Provincia de Córdoba, Argentina
+<body bgcolor="White" text="Black"> Provincia de Córdoba, Argentina
+	<p> En un evento con Grabois, el Papa criticó al gobierno de Milei por la represión a las protestas.
+	</p> 
 	<div class="container">
 		<h1>Diario de Progreso</h1>
 		<!-- Añade aquí tus entradas diarias -->
