--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 	<p> En un evento con Grabois, el Papa criticó al gobierno de Milei por la represión a las protestas.
 	</p> 
 	<div class="container">
-		<h1>Diario de Progreso</h1>
+		<h1>Turnero digital</h1>
+		<p>LLego como vos no lo esperabas. </p>
+		<img src="jps"
 		<!-- Añade aquí tus entradas diarias -->
 		<div class="date">2023-03-01</div>
 		<title>titulo</title>
