--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 	<div class="container">
 		<h1>Turnero digital</h1>
 		<p>LLego como vos no lo esperabas. </p>
-		<img src="jps"
 		<!-- Añade aquí tus entradas diarias -->
 		<div class="date">2023-03-01</div>
 		<title>titulo</title>
 		<div class="feature">
-			<h2>Feature 1</h2>
+			<h2 id="imagenes" class="section-title" >Imagenes</h2></h2>
+			<section class="carrusel"
+			 <div class="carrusel-img"<>/div> 
 			<p>Descripción de la feature 1</p>
 			<img src="/images/feature1.jpg" alt="Imagen de la feature 1" class="image">
 		</div>
