--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="date">2023-03-01</div>
 		<title>titulo</title>
 		<div class="feature">
-			<h2 id="imagenes" class="section-title" >Imagenes</h2></h2>
+			<h2 id="imagenes" class="Logo-Ministerio-de-Desarrollo-Social-y-Promocion-del-Empleo-03.png" >Imagenes</h2></h2>
 			<section class="carrusel"
 			 <div class="carrusel-img"<>/div> 
 			<p>Descripción de la feature 1</p>
