--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <body bgcolor="White" text="Black"> Provincia de Córdoba, Argentina
 	<p> En un evento con Grabois, el Papa criticó al gobierno de Milei por la represión a las protestas.
 	</p> 
+	<p align="left">Texto alineado a la izquierda </p>p>
 	<div class="container">
 		<h1>Turnero digital</h1>
 		<p>LLego como vos no lo esperabas. </p>
@@ -52,7 +53,7 @@
 		<div class="date">2023-03-01</div>
 		<title>titulo</title>
 		<div class="feature">
-			<h2 id="imagenes" class="Logo-Ministerio-de-Desarrollo-Social-y-Promocion-del-Empleo-03.png" >Imagenes</h2></h2>
+			<h2 id="imagenes" " >Imagenes</h2></h2>
 			<section class="carrusel"
 			 <div class="carrusel-img"<>/div> 
 			<p>Descripción de la feature 1</p>
