--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body bgcolor="White" text="Black"> Provincia de Córdoba, Argentina
 	<p> En un evento con Grabois, el Papa criticó al gobierno de Milei por la represión a las protestas.
 	</p> 
-	<p align="left">Texto alineado a la izquierda </p>p>
+	<p> Tickets soporte usuario </p>
 	<div class="container">
 		<h1>Turnero digital</h1>
 		<p>LLego como vos no lo esperabas. </p>
@@ -57,7 +57,7 @@
 			<section class="carrusel"
 			 <div class="carrusel-img"<>/div> 
 			<p>Descripción de la feature 1</p>
-			<img src="/images/feature1.jpg" alt="Imagen de la feature 1" class="image">
+			<img src="Logo-Ministerio-de-Desarrollo-Social-y-Promocion-del-Empleo-03.png" alt=Ministerio de Desarrollo Social y Promoción del Empleo> 
 		</div>
 		<div class="feature">
 			<h2>Feature 2</h2>
