--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
             <input type="password" placeholder="Contraseña" required>
             <button type="submit">Entrar</button>
         </form>
-        <div class="forgot-password">
-            <a href="#">¿Olvidaste tu contraseña?</a>
-        </div>
-    </div>
+     <div class="form-group">
+  <label for="username">Correo Electrónico</label>
+  <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
