--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
   <link rel="stylesheet" href="styles.css">
 
   <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
   <div class="login-container">
     <h2 class="text-center">Iniciar Sesión</h2>
     
     <form>
-      <div class="form-group">
-        <label for="username">Correo Electrónico</label>
-        <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
+     <div class="form-group position-relative">
+  <i class="fas fa-envelope input-icon"></i>
+  <label for="username">Correo Electrónico</label>
+  <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
+</div>
+<div class="form-group position-relative">
+  <i class="fas fa-lock input-icon"></i>
+  <label for="password">Contraseña</label>
+  <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
+</div>
+
       </div>
       <div class="form-group">
         <label for="password">Contraseña</label>
