--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Página estilo Bancor</title>
-  
-  <!-- Vincular el archivo de estilos -->
+
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Bootstrap CSS -->
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
 </head>
 <body>
   <div class="login-container">
     <h2 class="text-center">Iniciar Sesión</h2>
     
     <form>
-     <div class="form-group position-relative">
-  <i class="fas fa-envelope input-icon"></i>
-  <label for="username">Correo Electrónico</label>
-  <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
-</div>
-<div class="form-group position-relative">
-  <i class="fas fa-lock input-icon"></i>
-  <label for="password">Contraseña</label>
-  <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
-</div>
-
+      <div class="form-group position-relative">
+        <i class="fas fa-envelope input-icon"></i>
+        <label for="username">Correo Electrónico</label>
+        <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
       </div>
-      <div class="form-group">
+      <div class="form-group position-relative">
+        <i class="fas fa-lock input-icon"></i>
         <label for="password">Contraseña</label>
         <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
       </div>
@@ -41,11 +34,6 @@
       <a href="#">¿Olvidaste tu contraseña?</a>
     </p>
   </div>
-
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <!-- Vincular el archivo de scripts -->
   <script src="scripts.js"></script>
