--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2 class="text-center">Iniciar Sesión</h2>
-    
-    <form>
-      <div class="form-group position-relative">
-        <i class="fas fa-envelope input-icon"></i>
-        <label for="username">Correo Electrónico</label>
-        <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
-      </div>
-      <div class="form-group position-relative">
-        <i class="fas fa-lock input-icon"></i>
-        <label for="password">Contraseña</label>
-        <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
-      </div>
+ <div class="login-container">
+  <h2>Iniciar Sesión</h2>
+
+  <form>
+    <div class="form-group">
+      <i class="fas fa-envelope input-icon"></i>
+      <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
+    </div>
+
+    <div class="form-group">
+      <i class="fas fa-lock input-icon"></i>
+      <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
+    </div>
+
+    <button type="submit" class="login-btn">Iniciar sesión</button>
+  </form>
+
+  <p>
+    <a href="#">¿Olvidaste tu contraseña?</a>
+  </p>
+</div>
       
       <button type="submit" class="btn login-btn">Iniciar sesión</button>
     </form>
