--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Página estilo Bancor</title>
-
-  <!-- Vincular el archivo de estilos -->
-<link rel="stylesheet" href="styles.css">
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  
-  <!-- Font Awesome para los iconos -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Programas de Empleo</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Enlace a tu archivo CSS -->
 </head>
 <body>
-  <div class="login-container">
-    <h2>Iniciar Sesión</h2>
+    <!-- Encabezado -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Programas</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <form>
-      <!-- Campo de correo electrónico -->
-      <div class="form-group">
-        <i class="fas fa-envelope input-icon"></i>
-        <input type="email" class="form-control" id="username" placeholder="Ingresa tu correo" required>
-      </div>
+    <!-- Sección principal -->
+    <section class="hero">
+        <h1>Bienvenido a los Programas de Empleo</h1>
+        <p>Consulta y participa en nuestros programas.</p>
+        <button>Más información</button>
+    </section>
 
-      <!-- Campo de contraseña -->
-      <div class="form-group">
-        <i class="fas fa-lock input-icon"></i>
-        <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
-      </div>
+    <!-- Secciones de contenido -->
+    <section class="programas">
+        <h2>Programas Disponibles</h2>
+        <!-- Aquí podrías incluir tarjetas o enlaces a los programas -->
+    </section>
 
-      <!-- Botón de inicio de sesión -->
-      <button type="submit" class="login-btn">Iniciar sesión</button>
-    </form>
-
-    <p>
-      <a href="#">¿Olvidaste tu contraseña?</a>
-    </p>
-  </div>
-
-  <!-- Vincular el archivo de scripts -->
-  <script src="scripts.js"></script>
+    <!-- Pie de página -->
+    <footer>
+        <p>© 2024 Programas de Empleo - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
+
 
 
