--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head> 
     <!--Agregamos Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Programas de Empleo</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Enlace a tu archivo CSS -->
+</head>
+<body> 
+    <!--Insertamos el codigo Bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Programas de Empleo</a>
@@ -24,14 +31,6 @@
     </div>
   </div>
 </nav>
-
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programas de Empleo</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Enlace a tu archivo CSS -->
-</head>
-<body>
     <!-- Encabezado -->
     <header>
         <nav>
@@ -59,7 +58,9 @@
     <!-- Pie de página -->
     <footer>
         <p>© 2024 Programas de Empleo - Todos los derechos reservados</p>
-    </footer>
+    </footer> 
+    <!-- Bootstrap JS y dependencias -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
