--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 </head>
 <body>
     <!-- Barra de navegación -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tu Marca</a>
+        <a class="navbar-brand" href="#"><img src="tu-logo.png" alt="Logo" style="height:40px;"> Programas de Empleo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sección 1</a>
+                    <a class="nav-link" href="#">Programas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sección 2</a>
+                    <a class="nav-link" href="#">Contacto</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
+ <!-- Sección Hero -->
+    <section class="hero bg-primary text-white text-center d-flex align-items-center justify-content-center" style="height: 100vh;">
+        <div>
+            <h1>Bienvenido a los Programas de Empleo</h1>
+            <p>Accede a oportunidades y recursos</p>
+            <a href="#" class="btn btn-light btn-lg">Ver Programas</a>
+        </div>    
 
     <!-- Encabezado -->
     <header>
@@ -49,6 +55,24 @@
         <p>Consulta y participa en nuestros programas.</p>
         <button>Más información</button>
     </section>
+<section class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center">Programas Disponibles</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="programa1.jpg" class="card-img-top" alt="Programa 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Programa 1</h5>
+                        <p class="card-text">Descripción breve del programa.</p>
+                        <a href="#" class="btn btn-primary">Más información</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Repite esto para más programas -->
+        </div>
+    </div>
+</section>
 
     <!-- Secciones de contenido -->
     <section class="programas">
@@ -57,9 +81,10 @@
     </section>
 
     <!-- Pie de página -->
-    <footer>
-        <p>© 2024 Programas de Empleo - Todos los derechos reservados</p>
-    </footer> 
+ <footer class="bg-dark text-white text-center py-3">
+    <p>© 2024 Programas de Empleo. Todos los derechos reservados.</p>
+</footer>
+
     <!-- Bootstrap JS y dependencias -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
