--- a/index.html
+++ b/index.html
@@ -3,90 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programas de Empleo</title>
-    <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Información para Postulantes - Empleo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Barra de navegación -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="tu-logo.png" alt="Logo" style="height:40px;"> Programas de Empleo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Programas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
- <!-- Sección Hero -->
-    <section class="hero bg-primary text-white text-center d-flex align-items-center justify-content-center" style="height: 100vh;">
-        <div>
-            <h1>Bienvenido a los Programas de Empleo</h1>
-            <p>Accede a oportunidades y recursos</p>
-            <a href="#" class="btn btn-light btn-lg">Ver Programas</a>
-        </div>    
-
-    <!-- Encabezado -->
     <header>
+        <h1>Información para Postulantes</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Programas</a></li>
+                <li><a href="#">Postulantes</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Sección principal -->
-    <section class="hero">
-        <h1>Bienvenido a los Programas de Empleo</h1>
-        <p>Consulta y participa en nuestros programas.</p>
-        <button>Más información</button>
-    </section>
-<section class="bg-light py-5">
-    <div class="container">
-        <h2 class="text-center">Programas Disponibles</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="programa1.jpg" class="card-img-top" alt="Programa 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Programa 1</h5>
-                        <p class="card-text">Descripción breve del programa.</p>
-                        <a href="#" class="btn btn-primary">Más información</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Repite esto para más programas -->
-        </div>
-    </div>
-</section>
+    <main>
+        <section id="info">
+            <h2>Información importante para los postulantes</h2>
+            <p>Aquí puedes encontrar la información que necesitas para participar en nuestros programas de empleo. Asegúrate de cumplir con los requisitos y leer los detalles.</p>
+            <ul>
+                <li>Requisitos para postular.</li>
+                <li>Documentación necesaria.</li>
+                <li>Plazos y fechas de inscripción.</li>
+            </ul>
+        </section>
 
-    <!-- Secciones de contenido -->
-    <section class="programas">
-        <h2>Programas Disponibles</h2>
-        <!-- Aquí podrías incluir tarjetas o enlaces a los programas -->
-    </section>
+        <section id="faq">
+            <h2>Preguntas Frecuentes</h2>
+            <p>Resuelve tus dudas revisando nuestras preguntas frecuentes sobre los programas de empleo.</p>
+            <ul>
+                <li>¿Cómo puedo inscribirme?</li>
+                <li>¿Qué documentos debo presentar?</li>
+                <li>¿Cuáles son los plazos de inscripción?</li>
+            </ul>
+        </section>
+    </main>
 
-    <!-- Pie de página -->
- <footer class="bg-dark text-white text-center py-3">
-    <p>© 2024 Programas de Empleo. Todos los derechos reservados.</p>
-</footer>
-
-    <!-- Bootstrap JS y dependencias -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>
+        <p>© 2024 Programas de Empleo - Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
 
