--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Información para Postulantes - Empleo</title>
+    <title>Información para Postulantes - Programas de Empleo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Información para Postulantes</h1>
+        <h1>Programas de Empleo</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
@@ -21,32 +21,36 @@
     </header>
 
     <main>
-        <section id="info">
-            <h2>Información importante para los postulantes</h2>
-            <p>Aquí puedes encontrar la información que necesitas para participar en nuestros programas de empleo. Asegúrate de cumplir con los requisitos y leer los detalles.</p>
+        <section id="informacion">
+            <h2>Información para Postulantes</h2>
+            <p>En esta sección encontrarás toda la información necesaria para postularte a nuestros programas de empleo.</p>
+            
+            <h3>Requisitos Generales</h3>
             <ul>
-                <li>Requisitos para postular.</li>
-                <li>Documentación necesaria.</li>
-                <li>Plazos y fechas de inscripción.</li>
+                <li>Tener entre 18 y 30 años.</li>
+                <li>Residir en la provincia de Córdoba.</li>
+                <li>Ser desocupado/a o subocupado/a.</li>
+                <li>No haber sido beneficiario de otros programas.</li>
             </ul>
-        </section>
 
-        <section id="faq">
-            <h2>Preguntas Frecuentes</h2>
-            <p>Resuelve tus dudas revisando nuestras preguntas frecuentes sobre los programas de empleo.</p>
+            <h3>Documentación Necesaria</h3>
             <ul>
-                <li>¿Cómo puedo inscribirme?</li>
-                <li>¿Qué documentos debo presentar?</li>
-                <li>¿Cuáles son los plazos de inscripción?</li>
+                <li>DNI (Documento Nacional de Identidad).</li>
+                <li>Constancia de CUIL.</li>
+                <li>Certificado de estudios (si aplica).</li>
             </ul>
+
+            <h3>Plazos y Fechas</h3>
+            <p>La inscripción a los programas está abierta hasta el <strong>30 de noviembre</strong>.</p>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Programas de Empleo - Todos los derechos reservados.</p>
+        <p>© 2024 Programas de Empleo. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
+
 
 
 
