--- a/index.html
+++ b/index.html
@@ -3,50 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Información para Postulantes - Programas de Empleo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Página de Programas de Empleo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Programas de Empleo</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Programas</a></li>
-                <li><a href="#">Postulantes</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#programas">Programas</a></li>
+                <li><a href="#postulantes">Postulantes</a></li>
+                <li><a href="#informacion">Información</a></li>
             </ul>
         </nav>
     </header>
-
+    
     <main>
-        <section id="informacion">
+        <section id="inicio">
+            <h1>Bienvenido a Programas de Empleo</h1>
+            <p>Explora los programas y oportunidades disponibles.</p>
+        </section>
+
+        <section id="programas">
+            <h2>Programas Disponibles</h2>
+            <!-- Aquí irían los detalles de los programas -->
+        </section>
+
+        <section id="postulantes">
             <h2>Información para Postulantes</h2>
-            <p>En esta sección encontrarás toda la información necesaria para postularte a nuestros programas de empleo.</p>
-            
-            <h3>Requisitos Generales</h3>
-            <ul>
-                <li>Tener entre 18 y 30 años.</li>
-                <li>Residir en la provincia de Córdoba.</li>
-                <li>Ser desocupado/a o subocupado/a.</li>
-                <li>No haber sido beneficiario de otros programas.</li>
-            </ul>
+            <!-- Información para los postulantes -->
+        </section>
 
-            <h3>Documentación Necesaria</h3>
-            <ul>
-                <li>DNI (Documento Nacional de Identidad).</li>
-                <li>Constancia de CUIL.</li>
-                <li>Certificado de estudios (si aplica).</li>
-            </ul>
-
-            <h3>Plazos y Fechas</h3>
-            <p>La inscripción a los programas está abierta hasta el <strong>30 de noviembre</strong>.</p>
+        <section id="informacion">
+            <h2>Más Información</h2>
+            <!-- Sección de contacto o información adicional -->
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Programas de Empleo. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Programas de Empleo - Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
