--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Programas de Empleo</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
 </head>
 <body>
     <header>
@@ -37,6 +38,11 @@
         <section id="informacion">
             <h2>Más Información</h2>
             <!-- Sección de contacto o información adicional -->
+            <section id="programas">
+    <h2><i class="fas fa-check-circle"></i> Programas Disponibles</h2>
+    <p>Aquí puedes encontrar información sobre los programas que ofrecemos...</p>
+    <!-- Lista o descripción de los programas -->
+</section>
         </section>
     </main>
 
