--- a/index.html
+++ b/index.html
@@ -8,47 +8,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#programas">Programas</a></li>
-                <li><a href="#postulantes">Postulantes</a></li>
-                <li><a href="#informacion">Información</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <section id="inicio">
-            <h1>Bienvenido a Programas de Empleo</h1>
-            <p>Explora los programas y oportunidades disponibles.</p>
-        </section>
+   <header class="header">
+  <h1>Título principal</h1>
+  <nav>
+    <ul>
+      <li><a href="#seccion1">Sección 1</a></li>
+      <li><a href="#seccion2">Sección 2</a></li>
+    </ul>
+  </nav>
+</header>
+    <main class="container">
+  <section id="seccion1">
+    <h2>Subtítulo</h2>
+    <p>Descripción o contenido.</p>
+  </section>
 
-        <section id="programas">
-            <h2>Programas Disponibles</h2>
-            <!-- Aquí irían los detalles de los programas -->
-        </section>
+  <section id="seccion2">
+    <h2>Otra sección</h2>
+    <p>Más contenido aquí.</p>
+  </section>
+</main>
 
-        <section id="postulantes">
-            <h2>Información para Postulantes</h2>
-            <!-- Información para los postulantes -->
-        </section>
-
-        <section id="informacion">
-            <h2>Más Información</h2>
-            <!-- Sección de contacto o información adicional -->
-            <section id="programas">
-    <h2><i class="fas fa-check-circle"></i> Programas Disponibles</h2>
-    <p>Aquí puedes encontrar información sobre los programas que ofrecemos...</p>
-    <!-- Lista o descripción de los programas -->
-</section>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Programas de Empleo - Todos los derechos reservados</p>
-    </footer>
+<footer class="footer">
+  <p>Derechos reservados © 2024</p>
+</footer>
 </body>
 </html>
 
