--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Página de Programas de Empleo</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
    <header class="header">
@@ -18,15 +19,15 @@
   </nav>
 </header>
     <main class="container">
-  <section id="seccion1">
-    <h2>Subtítulo</h2>
-    <p>Descripción o contenido.</p>
-  </section>
+<section class="container">
+  <h2>Sección 1</h2>
+  <p>Contenido de la sección 1.</p>
+</section>
 
-  <section id="seccion2">
-    <h2>Otra sección</h2>
-    <p>Más contenido aquí.</p>
-  </section>
+<section class="container">
+  <h2>Sección 2</h2>
+  <p>Contenido de la sección 2.</p>
+</section>
 </main>
 
 <footer class="footer">
