--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     </ul>
   </nav>
 </header>
-    <main class="container">
-<section class="container">
-  <h2>Sección 1</h2>
-  <p>Contenido de la sección 1.</p>
-</section>
+  <main class="container">
+  <section>
+    <h2>Sección 1</h2>
+    <p>Contenido de la sección 1.</p>
+  </section>
 
-<section class="container">
-  <h2>Sección 2</h2>
-  <p>Contenido de la sección 2.</p>
-</section>
+  <section>
+    <h2>Sección 2</h2>
+    <p>Contenido de la sección 2.</p>
+  </section>
 </main>
+
 
 <footer class="footer">
   <p>Derechos reservados © 2024</p>
