--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <header class="header">
-  <h1>Título principal</h1>
+  <h1>Bienvenidos al boletin de cambios para Empleo </h1>
   <nav>
     <ul>
       <li><a href="#seccion1">Sección 1</a></li>
