--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
    <header class="header">
   <h1>Bienvenidos al boletin de cambios para Empleo </h1>
+    <p>Por este mismo medio se enteraran de los cambios que se produciran con el sistema de Empleo.
+    Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
   <nav>
     <ul>
       <li><a href="#seccion1">Sección 1</a></li>
