--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
    <header class="header">
   <h1>Bienvenidos al boletin de cambios para Empleo </h1>
     <p>Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
-  <nav>
-    <ul>
-      <li><a href="#seccion1">Sección 1</a></li>
-      <li><a href="#seccion2">Sección 2</a></li>
-    </ul>
-  </nav>
+    <div class="button-container">
+        <button onclick="openFunction1()">Función 1</button>
+        <button onclick="openFunction2()">Función 2</button>
+    </div>
+    <!-- Resto del contenido -->
 </header>
   <main class="container">
   <section>
