--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <h1>Bienvenidos al boletin de cambios para Empleo </h1>
     <p>Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
     <div class="button-container">
-        <button onclick="openFunction1()">Función 1</button>
-        <button onclick="openFunction2()">Función 2</button>
+        <button onclick="openFunction1()">Beneficiarios</button>
+        <button onclick="openFunction2()">Empresas </button>
     </div>
     <!-- Resto del contenido -->
 </header>
