--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <button onclick="openFunction1()">Beneficiarios</button>
         <button onclick="openFunction2()">Empresas </button>
     </div>
+       <!-- Aquí colocamos la sección -->
+          <div id="seccion1">
+        <h2>Benefiarios</h2>
+        <p>Nunca fue facil .....</p>
+    </div>
+       
     <!-- Resto del contenido -->
 </header>
   <main class="container">
