--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <h2>Benefiarios</h2>
         <p>Nunca fue facil .....</p>
     </div>
-       
+       <div id="Empresas">
+        <h2>Empresas</h2>
+        <p>Ingresar por aquí</p>
+    </div>
     <!-- Resto del contenido -->
 </header>
   <main class="container">
