--- a/index.html
+++ b/index.html
@@ -24,19 +24,26 @@
        <div id="Empresas">
         <h2>Empresas</h2>
         <p>Ingresar por aquí</p>
+              <nav aria-label="Navegación principal">
+        <ul class="menu">
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#seccion1">Sección 1</a></li>
+            <li><a href="#seccion2">Sección 2</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
     </div>
     <!-- Resto del contenido -->
 </header>
   <main class="container">
-  <section>
+<section class="seccion1">
     <h2>Sección 1</h2>
     <p>Contenido de la sección 1.</p>
-  </section>
-
-  <section>
+</section>
+<section class="seccion2">
     <h2>Sección 2</h2>
     <p>Contenido de la sección 2.</p>
-  </section>
+</section>
 </main>
 
 
