--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
     <h2>Sección 1</h2>
     <p>Contenido de la sección 1.</p>
 </section>
-<section class="seccion2">
-    <h2>Sección 2</h2>
-    <p>Contenido de la sección 2.</p>
+<section id="seccion2">
+    <div class="container">
+        <h2>Título de la Sección 2</h2>
+        <p>Contenido descriptivo de la sección 2.</p>
+        <button class="btn">Más información</button>
+    </div>
 </section>
+
 </main>
 
 
