--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
     <!-- Resto del contenido -->
 </header>
   <main class="container">
-<section class="seccion1">
-    <h2>Sección 1</h2>
-    <p>Contenido de la sección 1.</p>
+      */ agregamos estilos para la sección /*
+      
+<section id="seccion1">
+    <div class="container">
+        <h2>Título de la Sección 1</h2>
+        <p>Contenido descriptivo de la sección 2.</p>
+        <button class="btn">Más información</button>
+    </div>
 </section>
+
 <section id="seccion2">
     <div class="container">
         <h2>Título de la Sección 2</h2>
