--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Resto del contenido -->
 </header>
   <main class="container">
-      */ agregamos estilos para la sección /*
+     <!--agregamos estilos para la sección -->
       
 <section id="seccion1">
     <div class="container">
