--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
 </header>
   <main class="container">
      <!--agregamos estilos para la sección -->
-      
+   <section id="inicio" class="hero">
+    <div class="hero-content">
+        <h1>Bienvenido a Mi Página</h1>
+        <p>Explora nuestros servicios y encuentra lo que necesitas.</p>
+        <a href="#seccion2" class="btn-hero">Descubre más</a>
+    </div>
+</section>   
 <section id="seccion1">
     <div class="container">
         <h2>Título de la Sección 1</h2>
