--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <header class="header">
   <h1>Bienvenidos al boletin de cambios para Empleo </h1>
-       <img src= https://raw.githubusercontent.com/Dir-Tecno/dirtecno.github.io/refs/heads/main/images.jfif  alt="Descripción" style="width: 100%; height: auto;">
+       <img src= https://raw.githubusercontent.com/Dir-Tecno/dirtecno.github.io/refs/heads/main/images.jfif alt="Descripción" class="imagen-centrada">
     <p>Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
     <div class="button-container">
         <button onclick="openFunction1()">Beneficiarios</button>
