--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <!-- Aquí colocamos la sección -->
           <div id="seccion1">
         <h2>Benefiarios</h2>
-        <p>Ingresa por aquí .....</p>
+        <p>Ingresa por aquí</p>
     </div>
        <div id="Empresas">
         <h2>Empresas</h2>
