--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <div class="button-container">
         <button onclick="openFunction1()">Beneficiarios</button>
         <button onclick="openFunction2()">Empresas </button>
+    
     </div>
        <!-- Aquí colocamos la sección -->
           <div id="seccion1">
         <h2>Benefiarios</h2>
         <p>Ingresa por aquí</p>
+         <a href="https://ejemplo.com" class="btn">Ir a Ejemplo</a>
     </div>
        <div id="Empresas">
         <h2>Empresas</h2>
