--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
        <div id="Empresas">
         <h2>Empresas</h2>
         <p>Ingresar por aquí</p>
+           <a href="https://github.com" class="btn">Ir a GitHub</a>
               <nav aria-label="Navegación principal">
         <ul class="menu">
             <li><a href="#inicio">Inicio</a></li>
