--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <p>Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
     <div class="button-container">
         <button onclick="openFunction1()">Beneficiarios</button>
+         <a href="https://ejemplo.com" class="btn">Ir a Ejemplo</a>
         <button onclick="openFunction2()">Empresas </button>
+         <a href="https://github.com" class="btn">Ir a GitHub</a>
     
     </div>
        <!-- Aquí colocamos la sección -->
