--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="button-container">
         <button onclick="openFunction1()">Beneficiarios</button>
          <a href="https://ejemplo.com" class="btn">Ir a Ejemplo</a>
-        <button onclick="openFunction2()">Empresas </button>
+        <button onclick="openFunction2()">Empresas <a href="https://github.com" class="btn">Ir a GitHub</a> </button>
          <a href="https://github.com" class="btn">Ir a GitHub</a>
     
     </div>
