--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <h1>Bienvenidos al boletin de cambios para Empleo </h1>
     <p>Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
     <div class="button-container">
-        <button onclick="openFunction1()">Beneficiarios</button>
+        <button onclick="openFunction1()"><a href="https://ejemplo.com" class="btn">Ir a Ejemplo</a></button>
          <a href="https://ejemplo.com" class="btn">Ir a Ejemplo</a>
-        <button onclick="openFunction2()">Empresas <a href="https://github.com" class="btn">Ir a GitHub</a> </button>
-         <a href="https://github.com" class="btn">Ir a GitHub</a>
+        <button onclick="openFunction2()"> <a href="https://github.com" class="btn">Ir a GitHub</a> </button>
+        
     
     </div>
        <!-- Aquí colocamos la sección -->
