--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
      </div>
     
        
-       <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#seccion1">Sección 1</a></li>
-            <li><a href="#seccion2">Sección 2</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
+      <nav>
+  <a href="#inicio">Inicio</a>
+  <a href="#seccion1">Sección 1</a>
+  <a href="#seccion2">Sección 2</a>
+  <a href="#contacto">Contacto</a>
+</nav>
+<section id="inicio"> ... </section>
+<section id="seccion1"> ... </section>
+<section id="seccion2"> ... </section>
+<section id="contacto"> ... </section>
     </div>
     <!-- Resto del contenido -->
 </header>
