--- a/index.html
+++ b/index.html
@@ -3,51 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Programas de Empleo</title>
     <link rel="stylesheet" href="styles.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Mi Página Web</title>
 </head>
 <body>
-   <header class="header">
-  <h1>Bienvenidos al boletin de cambios para Empleo </h1>
-    <p>Es importante saber que para poder llevar adelante el programa +26, se utiliza un sistema dinámico que requiere cambios permantes. </p>   
-    <div class="button-container">
-        <button onclick="openFunction1()"><a href="https://ejemplo.com" class="btn">Ir a Ejemplo</a></button>
-        <button onclick="openFunction2()"> <a href="https://github.com" class="btn">Ir a GitHub</a> </button>
-        
-     </div>
-  <nav>
-  <a href="#inicio">Inicio</a>
-  <a href="#seccion1">Sección 1</a>
-  <a href="#seccion2">Sección 2</a>
-  <a href="#contacto">Contacto</a>
-</nav>
+    <nav>
+        <a href="#inicio">Inicio</a>
+        <a href="#seccion1">Sección 1</a>
+        <a href="#seccion2">Sección 2</a>
+        <a href="#contacto">Contacto</a>
+    </nav>
 
-<section id="inicio">
-  <!-- Contenido de Inicio -->
-</section>
+    <section id="inicio">
+        <h1>Bienvenido</h1>
+        <p>Descripción breve de la página.</p>
+    </section>
 
-<section id="seccion1">
-  <!-- Contenido de Sección 1 -->
-</section>
+    <section id="seccion1">
+        <h2>Sección 1</h2>
+        <p>Contenido de la sección 1.</p>
+    </section>
 
-<section id="seccion2">
-  <!-- Contenido de Sección 2 -->
-</section>
+    <section id="seccion2">
+        <h2>Sección 2</h2>
+        <p>Contenido de la sección 2.</p>
+    </section>
 
-<section id="contacto">
-  <!-- Contenido de Contacto -->
-</section>
-  
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Información de contacto.</p>
+    </section>
 
-
-</main>
-
-
-<footer class="footer">
-  <p>Derechos reservados © 2024</p>
-</footer>
+    <footer>
+        <p>Derechos reservados &copy; 2024</p>
+    </footer>
 </body>
 </html>
 
