--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section id="inicio">
         <h1>Bienvenido</h1>
-        <p>Descripción breve de la página.</p>
+        <p> En esta gacetilla le informaremos al personal de Empleo los cambios producidos en el Programa +26.</p>
     </section>
 
     <section id="seccion1">
