--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <nav>
         <a href="#inicio">Inicio</a>
+        Estoy amando demasiado a mi guitarra
         <a href="#seccion1">Sección 1</a>
         <a href="#seccion2">Sección 2</a>
         <a href="#contacto">Contacto</a>
