--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <nav>
         <a href="#inicio">Inicio</a>
-        Estoy amando demasiado a mi guitarra
-        <a href="#seccion1">Sección 1</a>
-        <a href="#seccion2">Sección 2</a>
+        <a href="Empleo">Sección 1</a>
+        <a href="Empresas">Sección 2</a>
         <a href="#contacto">Contacto</a>
     </nav>
 
@@ -20,13 +19,14 @@
         <p> En esta gacetilla le informaremos al personal de Empleo los cambios producidos en el Programa +26.</p>
     </section>
 
-    <section id="seccion1">
-        <h2>Sección 1</h2>
+    <section id="Empleo">
+        En esta sección se avanzo en
+        <h2>Empleo</h2>
         <p>Contenido de la sección 1.</p>
     </section>
 
-    <section id="seccion2">
-        <h2>Sección 2</h2>
+    <section id=Empresas">
+        <h2>Las empresas deben saber que </h2>
         <p>Contenido de la sección 2.</p>
     </section>
 
