--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     </section>
 
     <section id="Empleo">
-        En esta sección se avanzo en
         <h2>Empleo</h2>
-        <p>Contenido de la sección 1.</p>
+        <p> Debemos tener en cuenta que esto es para .</p>
     </section>
 
     <section id=Empresas">
