--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </section>
 
     <section id=Empresas">
-        <h2>Las empresas deben saber que </h2>
-        <p>Contenido de la sección 2.</p>
+        <h2>Las Empresas </h2>
+        <p> Las Empresas deben entener que .</p>
     </section>
 
     <section id="contacto">
